# variants-index-test

./: .gitignore  Makefile  README.md  index.html  index.toml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
0012668/: index.html
0012668/blas-lapack-variant-provider/: index.html
0012668/numpy/: index.html
0012668/nvidia-cublas/: index.html
0012668/nvidia-cuda-cupti/: index.html
0012668/nvidia-cuda-nvrtc/: index.html
0012668/nvidia-cuda-runtime/: index.html
0012668/nvidia-cudnn/: index.html
0012668/nvidia-cufft/: index.html
0012668/nvidia-cufile/: index.html
0012668/nvidia-curand/: index.html
0012668/nvidia-cusolver/: index.html
0012668/nvidia-cusparse/: index.html
0012668/nvidia-cusparselt/: index.html
0012668/nvidia-nccl/: index.html
0012668/nvidia-nvjitlink/: index.html
0012668/nvidia-nvtx/: index.html
0012668/nvidia-variant-provider/: index.html
0012668/openmp-variant-provider/: index.html
0012668/provider-variant-aarch64/: index.html
0012668/provider-variant-x86-64/: index.html
0012668/scikit-learn/: index.html
0012668/scipy/: index.html
0012668/torch/: index.html
0012668/torchvision/: index.html
0f27c92/: index.html
0f27c92/amd-variant-provider/: index.html
0f27c92/blas-lapack-variant-provider/: index.html
0f27c92/cupy/: index.html
0f27c92/intel-variant-provider/: index.html
0f27c92/numpy/: index.html
0f27c92/nvidia-cublas/: index.html
0f27c92/nvidia-cuda-cupti/: index.html
0f27c92/nvidia-cuda-nvrtc/: index.html
0f27c92/nvidia-cuda-runtime/: index.html
0f27c92/nvidia-cudnn/: index.html
0f27c92/nvidia-cufft/: index.html
0f27c92/nvidia-cufile/: index.html
0f27c92/nvidia-curand/: index.html
0f27c92/nvidia-cusolver/: index.html
0f27c92/nvidia-cusparse/: index.html
0f27c92/nvidia-cusparselt/: index.html
0f27c92/nvidia-nccl/: index.html
0f27c92/nvidia-nvjitlink/: index.html
0f27c92/nvidia-nvshmem/: index.html
0f27c92/nvidia-nvtx/: index.html
0f27c92/nvidia-variant-provider/: index.html
0f27c92/openmp-variant-provider/: index.html
0f27c92/provider-variant-aarch64/: index.html
0f27c92/provider-variant-x86-64/: index.html
0f27c92/scikit-learn/: index.html
0f27c92/scipy/: index.html
0f27c92/torch/: index.html
0f27c92/torchvision/: index.html
0f27c92/transformer-engine/: index.html
0f27c92/transformer-engine-lib/: transformer_engine_lib-2.7.0-variants.json
0f27c92/xgboost/: index.html
117d6f0/: index.html
117d6f0/blas-lapack-variant-provider/: index.html
117d6f0/numpy/: index.html
117d6f0/nvidia-cublas/: index.html
117d6f0/nvidia-cuda-cupti/: index.html
117d6f0/nvidia-cuda-nvrtc/: index.html
117d6f0/nvidia-cuda-runtime/: index.html
117d6f0/nvidia-cudnn/: index.html
117d6f0/nvidia-cufft/: index.html
117d6f0/nvidia-cufile/: index.html
117d6f0/nvidia-curand/: index.html
117d6f0/nvidia-cusolver/: index.html
117d6f0/nvidia-cusparse/: index.html
117d6f0/nvidia-cusparselt/: index.html
117d6f0/nvidia-nccl/: index.html
117d6f0/nvidia-nvjitlink/: index.html
117d6f0/nvidia-nvtx/: index.html
117d6f0/nvidia-variant-provider/: index.html
117d6f0/openmp-variant-provider/: index.html
117d6f0/provider-variant-aarch64/: index.html
117d6f0/provider-variant-x86-64/: index.html
117d6f0/scikit-learn/: index.html
117d6f0/scipy/: index.html
117d6f0/torch/: index.html
117d6f0/torchvision/: index.html
175a558/: index.html
175a558/amd-variant-provider/: index.html
175a558/blas-lapack-variant-provider/: index.html
175a558/cudf/: cudf-25.12.0a135-variants.json  index.html
175a558/cupy/: index.html
175a558/intel-variant-provider/: index.html
175a558/libcudf-cu12/: index.html
175a558/libcudf-cu13/: index.html
175a558/nvidia-cublas/: index.html
175a558/nvidia-cuda-cupti/: index.html
175a558/nvidia-cuda-nvrtc/: index.html
175a558/nvidia-cuda-runtime/: index.html
175a558/nvidia-cudnn/: index.html
175a558/nvidia-cufft/: index.html
175a558/nvidia-cufile/: index.html
175a558/nvidia-curand/: index.html
175a558/nvidia-cusolver/: index.html
175a558/nvidia-cusparse/: index.html
175a558/nvidia-cusparselt/: index.html
175a558/nvidia-nccl/: index.html
175a558/nvidia-nvjitlink/: index.html
175a558/nvidia-nvshmem/: index.html
175a558/nvidia-nvtx/: index.html
175a558/nvidia-variant-provider/: index.html
175a558/openmp-variant-provider/: index.html
175a558/provider-variant-aarch64/: index.html
175a558/provider-variant-x86-64/: index.html
175a558/rmm-cu12/: index.html
1f77a44/: index.html
3004567/: index.html
4676061/: index.html
4b0b501/: index.html
56e9d7a/: index.html
5f9d462/: index.html
6099ade/: index.html
61f23b0/: index.html
8c81bbb/: index.html
94194de/: index.html
985af62/: index.html
9f56910/: index.html
addd0e2/: index.html
aee7840/: index.html
b7c8206/: index.html
b9670e8/: index.html
be0c981/: index.html
f3c1219/: index.html
f53d925/: index.html
src/: __init__.py  build.py
v0.0.2/: index.html
(+630 files in other folders)
